infra/k8s/osm-map-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osm-map-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: osm-map-api
  ports:
    - name: http
      port: 80
      targetPort: http
